[package]
name = "transactions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.4"
rusqlite = "0.27"
tokio = { version = "1.0", features = ["full"] }
r2d2 = "0.8"
r2d2_sqlite = "0.20"
axum-macros = "0.1"
serde = { version = "1", features = ["derive"] }
eyre = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.2", features = ["trace"] }
